Introduced shields, secondary effects for weapons and epm mechanic.